chore: update .gitignore to exclude SQLite database files
- Add SQLite database file patterns to .gitignore
- Exclude *.db, *.sqlite, *.sqlite3, *.db-shm, *.db-wal files
- Prevent database files from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -229,6 +229,13 @@ Icon?
 # Entity Framework
 Migrations/
 
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+
 # Keep only schema migrations
 !Migrations/Initial*.cs
 !Migrations/*InitialCreate*.cs
